# lawfirm

./: .env  .env.example  .gitignore  .replit  README.md  app.py  commands.py  config.py  extensions.py  forms.py  gunicorn.conf.py  mail.txt  main.py  models.py  pyproject.toml  render.yaml  requirements-postgres.txt  requirements.txt  test.py  todo.py  workspace.py  wsgi.py
.github/workflows/: ci.yml
docs/: DAN OCHIENG - FIRM PROFILE  (1).docx  DESIGN.md
instance/: lawfirm.db  todo.db
migrations/: env.py
migrations/versions/: 18d943de40ed_add_chat_configs.py  5232b7830bf7_initial_schema.py  a1b2c3d4e5f6_add_blog_chat_assignment_user_fields.py  a54586e1e775_add_case_management_tables.py  b2c3d4e5f6a7_add_team_member_practice_number.py
routes/: __init__.py  admin_routes.py  auth_routes.py  chat_routes.py  client_routes.py  contact_routes.py  main_routes.py
scripts/: convert_images_webp.py
static/css/: custom.css  customone.css
static/images/: cred.txt
static/js/: admin-chat.js  main.js  rich-text.js
templates/: about.html  appointments.html  blog.html  blog_detail.html  case_studies.html  case_study_detail.html  case_tracker.html  contact.html  index.html  layout.html  privacy.html  search.html  service_detail.html  services.html  team.html  team_member.html  terms.html
templates/admin/: blog.html  blog_edit.html  case_edit.html  case_invoices.html  case_milestones.html  cases.html  chat_room.html  chats.html  team.html  (+12 more)
tests/: conftest.py  test_routes.py
utils/: email_utils.py  firm_contact.py  sanitize.py  security.py  sqlitecloud.py  uploads.py
(+17 files in other folders)
