[project]
name = "lawfirm"
version = "1.0.0"
description = "Dan Ochieng & Company Advocates — Flask law firm website"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "email-validator>=2.2.0",
    "eventlet>=0.39.1",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "reportlab>=4.2.5",
    "resend>=2.6.0",
    "sqlalchemy-sqlitecloud>=0.1.2",
    "sqlitecloud>=0.0.83",
]

[project.optional-dependencies]
sqlitecloud = [
    "sqlalchemy-sqlitecloud>=0.1.2",
    "sqlitecloud>=0.0.83",
]
postgres = [
    "psycopg2-binary>=2.9.10",
]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
